<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Rowing Pose Detector</string>
    <string name="media_pipe">MediaPipe</string>

    <string name="menu_camera">Camera</string>

    <!-- Gallery screen texts -->

    <string name="menu_gallery">Gallery</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="gallery_fragment_text">Click + to add a video to begin pose detection</string>


    <string name="label_timestamp">%d s</string>
    <string name="label_timestamp_title">Time</string>
    <string name="feedback_message">%s</string>
    <string name="label_feedback_message">Feedback</string>
    <string name="count">%s</string>
    <string name="label_count">Stroke count</string>

    <string name="button_name">STOP</string>

    <!-- Summary screen texts -->
    <string name="total_stroke_count">%d</string>
    <string name="label_total_stroke_count">Total stroke</string>
    <string name="summary_title">Summary View</string>
    <string name="correct_percentage">%d percent of your stroke are correct</string>
    <string name="label_correct_percentage">Overview</string>
    <string name="most_common_mistake">%s</string>
    <string name="label_most_common_mistake">Most Common mistake</string>

    <string name="back_button">Back To Home</string>
    <string name="app_title">Rowing Pose Detection</string>
</resources>
