<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal"
    tools:context=".fragment.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:scaleType="centerCrop"
                android:src="@drawable/summarybackground" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/strokeCountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_stroke_count"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_blue_RP3_theme"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/strokeCountNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_total_stroke_count"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/CommonMistake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/most_common_mistake"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_blue_RP3_theme"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CommonMistakeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_most_common_mistake"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CorrectPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/correct_percentage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_blue_RP3_theme"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CorrectPercentageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_correct_percentage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_blue_RP3_theme"
        android:text="@string/back_button" />


</FrameLayout>